<resources>
    <string name="app_name">PuppyPlay</string>
    <string name="made_by">Gemaakt door Lois Gussenhoven en Nick van Endhoven</string>
    <string name="name">Jouw naam</string>
    <string name="female">Vrouwtjes hond</string>
    <string name="male">Mannetjes hond</string>
    <string name="create">Aanmaken</string>
    <string name="welcome_talk">Welkom, creeer uw hond!</string>
    <string name="name_dog">Naam van je hond</string>
    <string name="hunger">Honger</string>
    <string name="thirst">Dorst</string>
    <string name="poop">Poep</string>
    <string name="AllInfo">Vul in alle gegevens</string>
    <string name="social">Sociaal</string>
    <string name="loading">laden</string>
    <string name="title_activity_maps">Map</string>
    <string name="allInfo">Vul in alle gegevens</string>
</resources>
