<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ppbackground"
    tools:context="com.example.loisgussenhoven.puppyplay.CreateActivity">

    <TextView
        android:id="@+id/AC_TV_Welcome"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_talk"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AC_ET_Name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/AC_BTN_Create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AC_TV_Welcome"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/AC_ET_DogName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name_dog"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/AC_ET_Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/AC_ET_Name"
        app:layout_constraintTop_toBottomOf="@+id/AC_ET_Name" />

    <Button
        android:id="@+id/AC_BTN_Create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/create"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/AC_RG_Gender"
        android:layout_width="234dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/AC_ET_DogName"
        app:layout_constraintTop_toBottomOf="@+id/AC_ET_DogName">

        <RadioButton
            android:id="@+id/AC_RB_Female"
            android:layout_width="215dp"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/female"
            app:layout_constraintEnd_toEndOf="@+id/AC_ET_DogName"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toEndOf="@+id/AC_RB_Male"
            app:layout_constraintTop_toBottomOf="@+id/AC_ET_DogName" />

        <RadioButton
            android:id="@+id/AC_RB_Male"
            android:layout_width="213dp"
            android:layout_height="14dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/male"
            app:layout_constraintEnd_toEndOf="@+id/AC_ET_DogName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/AC_ET_DogName"
            app:layout_constraintTop_toBottomOf="@+id/AC_ET_DogName" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
